ChangeLog for herdstat

2005-09-13 Aaron Walker <ka0ttic@gentoo.org>

	* herdstat/portage/herd.cc, herdstat/portage/herd.hh,
	herdstat/portage/developer.cc, herdstat/portage/developer.hh: Use
	vector of pointers for our herd/developer containers.
	* herdstat/portage/metadata.xml.hh: Don't implicitly convert to
	metadata as it looks like the copy constructor is invoked.  Added a
	data() member instead that returns a const reference.
	* herdstat/portage/herds_xml.cc, herdstat/portage/herds_xml.hh,
	herdstat/portage/devaway_xml.cc, herdstat/portage/devaway_xml.hh,
	herdstat/portage/metadata.cc, herdstat/portage/metadata.hh: Updated
	with herd/developer design changes.
	* herdstat/util/functors.hh: Added DereferenceStrLess,
	DereferenceStrGreater, and DereferenceStrEqual template functors for
	comparing a pointer of a certain type against a std::string.  Also
	added DeleteAndNullify functor for cleaning up containers of pointers
	with a simple std::for_each call.

2005-09-12 Aaron Walker <ka0ttic@gentoo.org>

	* Makefile.am.common: Added more warning flags: -Woverloaded-virtual
	-Winline -Wredundant-decls.
	* src/herds_xml.cc, src/devaway_xml.cc: Add back the missing fetch
	logic I forgot to add when rewriting the herds_xml class, so that if
	fetching fails, we can use the cached copy.
	* herdstat/util/functors.hh: New source file for some general purpose
	utility functors.
	* herdstat/portage/version.hh: Tidy up a little bit.  Use new
	DereferenceLess (stolen from Effective STL) template functor instead
	of version_sort_T.  Also, there's no reason for versions_T to declare
	virtual functions at this time.  Also fixed bug in operator> of all
	classes (negating operator< gets you >= not >).  Also fixed bug in
	versions_T::front() (we were dereferencing begin()+1 not begin()).
	* herdstat/exceptions.hh: Remove Exception's copy constructor and
	assignment operator as it was only added for correctness (it has